# RESGEN

./: .gitignore  Cargo.toml  adsManager.js  auth.js  config.json  craft.js  design.js  fleet.js  game.js  history.html  id_save.json  index.html  index1.html  index3.html  save.js  script.js  sounds.js  statistics.js  style.css  styles.css  universl.html
css/: style.css  styles.css
game/: gameState.js  mechanics.js  saveManager.js  style.css  ui.js
js/: achievements.js  audio-manager.js  config.js  game-state.js  game.js  gameConfig.js  gameState.js  index.html  init.js  inventory.js  mechanics.js  quest-system.js  questSystem.js  quests.js  save-manager.js  save.js  saveManager.js  supabase-cloud.js  supabase-cloud.js1  ui.js  upgrades.js  voice-alerts.js
js/Новая папка/: gameState.js  ui.js
js/последняя/: audioManager.js  index.html  saveManager.js
pkg/: corebox_rs.d.ts  corebox_rs.js  corebox_rs_bg.wasm  corebox_rs_bg.wasm.d.ts  package.json
resgen/: RESGEN.code-workspace  index.html  questSystem.js  ui.js
resgen/css/: style.css
resgen/js/: audioManager.js  config.js  init.js  ui.js
src/: lib.rs
src/game/: config.rs  events.rs  state.rs
src/systems/: economy.rs  mining.rs  mod.rs  neuro_ecosystem.rs  rebel.rs  upgrades.rs
src/web/: ui.rs
star/: adsManager.js  style.css
