[package]
name = "corebox-rs"
version = "3.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "HtmlButtonElement",
    "Storage",
    "Request",
    "Response",
    "Headers",
    "RequestInit",
    "ResponseType"
] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
once_cell = "1.19"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.2", features = ["futures"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
